# bsky-music-feed

./: .env  .env.example  .gitignore  Cargo.toml  readme.org
.sqlx/: query-4f2a29bf68dd050eb8b66eac82b81a3e77aeab7ef59cae901450d9e84d221d26.json  query-a83e738e1ec04d41ef1542f1414c74af2304d7bb3c5d6194b2ab4deb71ef77d4.json  query-a938e043f6fa0070ed9b7320290293b1f224a090794aea38e935f5c54c228c6d.json  query-f503dcb6152f7d2488eb18bd22da11af0f8664482641704b9e341e330df453f5.json  query-fb8f30da2023db7c4659b59f29a3956c903a763b89a1490750312a7e897b4549.json
migrations/: 20241117140804_create_posts_table.sql  20241117142342_create_links_table.sql
scripts/: package-lock.json  package.json  publishfeed.js
src/: algos.rs  atproto.rs  ingest.rs  link_finder.rs  main.rs  server.rs
src/firehose/: handler.rs  mod.rs  stream.rs  subscription.rs
src/models/: links.rs  mod.rs  posts.rs
