[package]
name = "bsky-music-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
atrium-api = { version = "0.24.7" }
axum = "0.7.9"
chrono = "0.4.34"
dotenv = "0.15.0"
futures = "0.3.30"
ipld-core = { version = "0.4.1", default-features = false, features = ["std"] }
regex = "1.11.1"
rs-car = "0.4.1"
serde_ipld_dagcbor = { version = "0.6.1", default-features = false, features = ["std"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
trait-variant = "0.1.1"
